--- a/lib/aweplug/helpers/video_player.html.slim
+++ b/lib/aweplug/helpers/video_player.html.slim
@@ -1,9 +1,9 @@
 div(itemprop="video" itemscope itemtype="http://schema.org/VideoObject")
   h4 itemprop="name" #{video.title}
   / TODO Add more metadata
-  meta itemprop="duration" content="#{video.duration_in_seconds}"
-  meta itemprop="thumbnail" content="#{video.thumb_url}"
-  meta itemprop="uploadDate" content="#{video.upload_date_iso8601}"
+  span itemprop="duration" content="#{video.duration_in_seconds}"
+  span itemprop="thumbnail" content="#{video.thumb_url}"
+  span itemprop="uploadDate" content="#{video.upload_date_iso8601}"
   .flex-video(widescreen vimeo)
     iframe(src="//player.vimeo.com/video/#{video.id}\?title=0&byline=0&portrait=0&badge=0&color=2664A2" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen)
 / TODO Add this back in once we have identity support  
