--- a/lib/aweplug/helpers/video_player.html.slim
+++ b/lib/aweplug/helpers/video_player.html.slim
@@ -1,4 +1,4 @@
-div(itemprop="video" itemscope itemtype="http://schema.org/VideoObject")
+div(itemprop="video" itemscope itemtype="http://schema.org/VideoObject" data-searchisko-type="jbossdeveloper_vimeo" data-searchisko-id="#{video.id}")
   h4 itemprop="name" #{video.title}
   / TODO Add more metadata
   span itemprop="duration" content="#{video.duration_in_seconds}"
@@ -6,12 +6,5 @@ div(itemprop="video" itemscope itemtype="http://schema.org/VideoObject")
   span itemprop="uploadDate" content="#{video.upload_date_iso8601}"
   .flex-video(widescreen vimeo)
     iframe(src="//player.vimeo.com/video/#{video.id}?title=0&byline=0&portrait=0&badge=0&color=2664A2" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen)
-/ TODO Add this back in once we have identity support  
-  - video.cast.each do |c|
-    .follow-links
-      span(class="title")Follow #{first_name(c.display_name)}
-      a: i.icon-rss
-      a: i.icon-facebook
-      a: i.icon-twitter
-      a: i.icon-linkedin
+  span.contributors
 
